# ticket-booking

./: .env.docker  .env.example  .gitignore  ARCHITECTURE.md  DOCKER_REFERENCE.md  DOCKER_SETUP.md  Dockerfile  GETTING_STARTED.md  QUICK_START.md  README.md  RUNNING_TESTS.md  TESTING_RESULTS.md  docker-compose.yml  docker-helper.sh  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py  script.py.mako
alembic/versions/: 001_initial.py
app/: __init__.py  database.py  exception_handlers.py  exceptions.py  main.py  models.py  scheduler.py  schemas.py  settings.py
app/repositories/: __init__.py  base_repository.py  booking_repository.py  event_repository.py  hold_repository.py
app/routes/: __init__.py  bookings.py  events.py  holds.py
app/services/: __init__.py  booking_service.py  event_service.py  hold_service.py
tests/: conftest.py  test_booking_service.py  test_concurrency.py  test_event_service.py  test_hold_service.py
